--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "LinkedIn Feed Reader",
+    "name": "LeadGen",
     "version": "1.0",
     "description": "Extracts name, company, and post content from LinkedIn home feed.",
     "permissions": ["scripting", "activeTab", "storage"],
