--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
       "https://api.openai.com/*"
     ],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "action": {
       "default_title": "S4S LinkedIn Tool"
